--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
-
-
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>MY FIRST SITE</title>
-  <meta name="description" content="MY FIRST SITE DESCRIPTION">
-  <meta name="author" content="MY NAME">
+<meta charset="UTF-8">
+<title>Sample</title>
 </head>
 <body>
-  <h1>Welcome!</h1>
-  <p>This is my first web-page!</p>
+
+<p>Before link <a href="http://google.com">Some another web-page (Google)</a> after link </p>
+
 </body>
 </html>
