--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<title>Sample</title>
+  <meta charset="utf-8">
+  <title>RockChords</title>
+  <link rel="shortcut icon" href="images/logo.png" />
+  <link rel="stylesheet" href="stylesheets/style.css">
 </head>
+
 <body>
-
-<p>Before link <a href="http://google.com">Some another web-page (Google)</a> after link </p>
-
+  <div class="page">
+    <div class="header">
+      <img id="logo" src="images/logo.png" alt="Logo RockChords">
+      <h1>Rock Chords</h1>
+    </div>
+    <div class="menu">
+      <ul>
+        <li>
+          <a class="isActive" href="index.html" >Home</a>
+        </li>
+        <li>
+          <a href="users.html">Users</a>
+        </li>
+        <li>
+          <a href="tasks1.html" style="">Chords</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+      </ul>
+    </div>
+    <div class="content">
+           Dear visitor!
+          <br>Welcome to the best website of guitar training for beginners, where everyone can learn how to play guitar from scratch.
+          Good luck!
+    </div>
+  </div>
 </body>
+
+</html>
+
+<!--
+  <body>
+  <div class="main">
+    <div class="page">
+      <div id="header">
+        <img src="images/logo.png" heigth="50" width="50" alt="Logo RockChords" align="left" style="float:left">
+        <span class="logo">
+          <b> RockChords</b>
+        </span>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
+  
+  
+  
+  
+  
+  
+  
+  <div id="header">
+    <img src="images/logo.png" heigth="210" width="230" alt="Logo RockChords" align="left" style="float:left">
+    <h1 class="logo">
+      <b>RockChords</b>
+    </h1>
+  </div> -->
+
+<!--<div style="text-align:center">
+    <h1 class="logo">
+      <b>RockChords</b>
+    </h1>
+
+
+    <hr>
+    <p class="about"> Dear visitor!
+      <br> Welcome to the best website of guitar training for beginners, where everyone can learn how to play guitar from scratch.
+      Good luck!</p>
+    <hr>
+  </div>
+  <!--  <ul>
+      <li><a name="index.html">Home</a> </li>
+      <li><a href="users.html">Users</a> </li>
+      <li><a href="tasks1.html">Tabulation</a> </li>
+      <li><a href="about.html">About</a> </li>
+    </ul>
+  </li>  -->
+
+<!--<ul class="menu">
+    <li>
+      <a href="index.html" class="current">Home</a>
+    </li>
+    <li>
+      <a href="users.html">Users</a>
+    </li>
+    <li>
+      <a href="tasks1.html">Tabulation</a>
+    </li>
+    <li>
+      <a href="about.html">About</a>
+    </li>
+  </ul>--!>
+</body>
+
 </html>
