--- a/about.html
+++ b/about.html
@@ -37,6 +37,8 @@
       to join the world of music. With it, you can play the guitar and discover something new in yourself, previously not
       known, regardless of the level of preparation and age or other unexpected features. Music is an eternal art, and a
       guitar is the best instrument to realize and acquire a faithful friend for ages.
+      <p> Author: Antusheva Masha
+        <br>Date of creation: 16.09.2018</p>
     </div>
   </div>
 </body>
