--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="users.html">Users</a>
         </li>
         <li>
-          <a href="tasks1.html" style="">Chords</a>
+          <a href="tasks1.html">Chords</a>
         </li>
         <li>
           <a href="about.html">About</a>
@@ -36,72 +36,6 @@
           Good luck!
     </div>
   </div>
-</body>
-
-</html>
-
-<!--
-  <body>
-  <div class="main">
-    <div class="page">
-      <div id="header">
-        <img src="images/logo.png" heigth="50" width="50" alt="Logo RockChords" align="left" style="float:left">
-        <span class="logo">
-          <b> RockChords</b>
-        </span>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
-  
-  
-  
-  
-  
-  
-  
-  <div id="header">
-    <img src="images/logo.png" heigth="210" width="230" alt="Logo RockChords" align="left" style="float:left">
-    <h1 class="logo">
-      <b>RockChords</b>
-    </h1>
-  </div> -->
-
-<!--<div style="text-align:center">
-    <h1 class="logo">
-      <b>RockChords</b>
-    </h1>
-
-
-    <hr>
-    <p class="about"> Dear visitor!
-      <br> Welcome to the best website of guitar training for beginners, where everyone can learn how to play guitar from scratch.
-      Good luck!</p>
-    <hr>
-  </div>
-  <!--  <ul>
-      <li><a name="index.html">Home</a> </li>
-      <li><a href="users.html">Users</a> </li>
-      <li><a href="tasks1.html">Tabulation</a> </li>
-      <li><a href="about.html">About</a> </li>
-    </ul>
-  </li>  -->
-
-<!--<ul class="menu">
-    <li>
-      <a href="index.html" class="current">Home</a>
-    </li>
-    <li>
-      <a href="users.html">Users</a>
-    </li>
-    <li>
-      <a href="tasks1.html">Tabulation</a>
-    </li>
-    <li>
-      <a href="about.html">About</a>
-    </li>
-  </ul>--!>
 </body>
 
 </html>
