--- a/user1.html
+++ b/user1.html
@@ -17,10 +17,10 @@
         <div class="menu">
             <ul>
                 <li>
-                    <a href="index.html" class="current">Home</a>
+                    <a href="index.html" >Home</a>
                 </li>
                 <li>
-                    <a href="users.html">Users</a>
+                    <a class="isActive" href="users.html">Users</a>
                 </li>
                 <li>
                     <a href="tasks.html">Chords</a>
@@ -36,7 +36,10 @@
                 <li>Login: Vanechka </li>
                 <li>Full name: Ivanov Ivan Ivanovich </li>
                 <li>Date of registration: 12.09.2017 </li>
-                <li>Biography: I am cool... </li>
+                <li>Biography:"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
+                    sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.  </li>
             </ul>
         </div>
     </div>
