--- a/users.html
+++ b/users.html
@@ -31,14 +31,34 @@
                 </ul>
               </div>
         <div class="content">
-            <ol type="1">
+                <table border="3">
+                        <tr> 
+                            <th>Login</th>
+                            <th>Full name</th>
+                            <th>Date of registration</th>
+                        </tr>
+                        <tr>
+                            <td><a href="user1.html">Vanechka</a></td>
+                            <td>Ivanov Ivan Ivanovich</td>
+                            <td>12.09.2017</td>
+                        </tr>
+                        <tr>
+                            <td><a href="user2.html">anechka</a></td>
+                            <td>Petrova Anja Alexeevna</td>
+                            <td>10.12.2016</td>
+                        </tr>
+                    </table>
+
+
+            
+       <!--     <ol type="1">
                 <li>
                     <a href="user1.html">Ivanov Ivan Ivanovich</a>
                 </li>
                 <li>
                     <a href="user2.html">Petrova Anja Alexeevna</a>
                 </li>
-            </ol>
+            </ol>-->
 </body>
 </div>
 </div>
