--- a/user2.html
+++ b/user2.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-        <meta charset="utf-8">
-        <title>RockChords</title>
-        <link rel="shortcut icon" href="images/logo.png" />
-        <link rel="stylesheet" href="stylesheets/style.css">
+    <meta charset="utf-8">
+    <title>RockChords</title>
+    <link rel="shortcut icon" href="images/logo.png" />
+    <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
 <body>
@@ -17,10 +17,10 @@
         <div class="menu">
             <ul>
                 <li>
-                    <a href="index.html" class="current">Home</a>
+                    <a href="index.html" >Home</a>
                 </li>
                 <li>
-                    <a href="users.html">Users</a>
+                    <a class="isActive" href="users.html">Users</a>
                 </li>
                 <li>
                     <a href="tasks.html">Chords</a>
@@ -31,13 +31,16 @@
             </ul>
         </div>
         <div class="content">
-                <img id="ava" src="images/anja.png" alt="User">
-                <ul>
-                    <li>Login: agent007 </li>
-                    <li>Full name: Petrova Anja </li>
-                    <li>Date of registration: 10.12.2016 </li>
-                    <li>Biography:<br> Lorem ipsum </li>
-                </ul>
+            <img id="ava" src="images/anja.png" alt="User">
+            <ul>
+                <li>Login: anechka </li>
+                <li>Full name: Petrova Anja </li>
+                <li>Date of registration: 10.12.2016 </li>
+                <li>Biography:
+                    <br> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born
+                    and I will give you a complete account of the system, and expound the actual teachings of the great explorer
+                    of the truth, the master-builder of human happiness. </li>
+            </ul>
         </div>
     </div>
 </body>
