--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="users.html">Users</a>
         </li>
         <li>
-          <a href="tasks1.html">Chords</a>
+          <a href="tasks.html">Chords</a>
         </li>
         <li>
           <a href="about.html">About</a>
