--- a/task1.html
+++ b/task1.html
@@ -17,7 +17,7 @@
         <div class="menu">
                 <ul>
                   <li>
-                    <a href="index.html" class="current">Home</a>
+                    <a href="index.html">Home</a>
                   </li>
                   <li>
                     <a href="users.html">Users</a>
